--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,6 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+.gradient {
+  background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+}
